# SDL3-CMake-Starter

./: .clang-format  CMakeLists.txt  Makefile  README.md
src/: main.cpp
